fix overflow

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,6 +7,7 @@
     animation: fadeInAnimation ease 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+    overflow: hidden;
 }
 
 @media (max-width: 1200px) {
